# vibe-shopping-llm

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vibe_to_json_prompt.md
data/: Apparels_shared.xlsx  training.json
src/: find_recommendations.py  vibe_shopping_agent.py
